--- a/LevelDB/LevelDB.vcxproj
+++ b/LevelDB/LevelDB.vcxproj
@@ -40,8 +40,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(SolutionDir)Lib</OutDir>
-    <IntDir>$(SolutionDir)Temp</IntDir>
+    <OutDir>$(SolutionDir)Lib\</OutDir>
+    <IntDir>$(SolutionDir)Temp\$(Configuration)\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -52,6 +52,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>./;./include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <DisableSpecificWarnings>4013;4018;4244;4800;4819;4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -77,59 +78,40 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="db\autocompact_test.cc" />
     <ClCompile Include="db\builder.cc" />
     <ClCompile Include="db\c.cc" />
-    <ClCompile Include="db\corruption_test.cc" />
-    <ClCompile Include="db\c_test.c" />
     <ClCompile Include="db\dbformat.cc" />
-    <ClCompile Include="db\dbformat_test.cc" />
     <ClCompile Include="db\db_bench.cc" />
     <ClCompile Include="db\db_impl.cc" />
     <ClCompile Include="db\db_iter.cc" />
-    <ClCompile Include="db\db_test.cc" />
     <ClCompile Include="db\filename.cc" />
-    <ClCompile Include="db\filename_test.cc" />
     <ClCompile Include="db\leveldb_main.cc" />
     <ClCompile Include="db\log_reader.cc" />
-    <ClCompile Include="db\log_test.cc" />
     <ClCompile Include="db\log_writer.cc" />
     <ClCompile Include="db\memtable.cc" />
     <ClCompile Include="db\repair.cc" />
-    <ClCompile Include="db\skiplist_test.cc" />
     <ClCompile Include="db\table_cache.cc" />
     <ClCompile Include="db\version_edit.cc" />
-    <ClCompile Include="db\version_edit_test.cc" />
     <ClCompile Include="db\version_set.cc" />
-    <ClCompile Include="db\version_set_test.cc" />
     <ClCompile Include="db\write_batch.cc" />
-    <ClCompile Include="db\write_batch_test.cc" />
     <ClCompile Include="port\env_win.cc" />
     <ClCompile Include="port\port_chromium.cc" />
     <ClCompile Include="table\block.cc" />
     <ClCompile Include="table\block_builder.cc" />
     <ClCompile Include="table\filter_block.cc" />
-    <ClCompile Include="table\filter_block_test.cc" />
     <ClCompile Include="table\format.cc" />
     <ClCompile Include="table\iterator.cc" />
     <ClCompile Include="table\merger.cc" />
     <ClCompile Include="table\table.cc" />
     <ClCompile Include="table\table_builder.cc" />
-    <ClCompile Include="table\table_test.cc" />
     <ClCompile Include="table\two_level_iterator.cc" />
     <ClCompile Include="util\arena.cc" />
-    <ClCompile Include="util\arena_test.cc" />
     <ClCompile Include="util\bloom.cc" />
-    <ClCompile Include="util\bloom_test.cc" />
     <ClCompile Include="util\cache.cc" />
-    <ClCompile Include="util\cache_test.cc" />
     <ClCompile Include="util\coding.cc" />
-    <ClCompile Include="util\coding_test.cc" />
     <ClCompile Include="util\comparator.cc" />
     <ClCompile Include="util\crc32c.cc" />
-    <ClCompile Include="util\crc32c_test.cc" />
     <ClCompile Include="util\env.cc" />
-    <ClCompile Include="util\env_test.cc" />
     <ClCompile Include="util\file_misc.cpp" />
     <ClCompile Include="util\filter_policy.cc" />
     <ClCompile Include="util\hash.cc" />
